creating navigation bar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Children Rescue Centre</title>
 </head>
 <body>
+
+    <ul class="navbar">
+        <li><a href="#home">HOME</a></li>
+        <li><a href="#contact">CONTACT US</a></li>
+        <li id="logo"><img src="Images/help2-removebg-preview.png" alt="Logo"></li>
+        <li><a href="#about" id="about">ABOUT US</a></li>
+        <li class="signup-btn"><a href="#signup">SIGN UP</a></li>
+      </ul>
     
+
+
+    <script src="script.js"></script>
 </body>
 </html>
