--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
             
             <ul class="footer">
                 <li><a href="#services">Services</a></li>
-                <li><a href="#usefullinks">Useful Links</a></li>
-                <p><span id="return"> Thank You |<a href="#home">Back to top</a></p></span> 
+                <p><span id="return"> Thank You |<a href="#home"><span id="backtotop">Back to top</span> </a></p></span> 
                 <li><span id="rights"><p>&copy; 2023 Children Rescue Centre. All rights reserved.</p></span>
                 </li>
             </ul>
