--- a/index.html
+++ b/index.html
@@ -20,21 +20,22 @@
         </ul>
         <div class="helping_hands">
             <h2>
-                <span class="description">Join us in saving children <br>
+                <span class="description">Join us 🤝 in saving children <br>
                 from poverty. Donate today and <br>
                 make a lasting impact.</span>
             </h2>
         </div>    
         <div class="donation">
-            <button id="donateButton">DONATE NOW</button>
+            <a href="./donation.html">
+                <span><button id="donateButton">DONATE NOW</button></span>
+            </a>   
         </div>
 
         <div id="donateForm" style="display: none;">
        
         </div>
+</div>
 
-      
-    </div>
       <!-- <div class="footer"> -->
     <footer>
             <ul class="footer">
