inter linking pages

--- a/Assets/donation.html
+++ b/Assets/donation.html
@@ -35,8 +35,10 @@
           <button type="submit" id="donateButton">Donate Now</button>
         </form>
         </div>
+        <a href="index.html">Not registered? <span>Create an account</span></a>
+
     
 
-        <script src="donation.js"></script>
+        <script src="/Assets/donation.js"></script>
 </body>
 </html>
