--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="#contact">CONTACT US</a></li>
             <li id="logo"><img src="Images/help2-removebg-preview.png" alt="Logo"></li>
             <li><a href="#about" id="about">ABOUT US</a></li>
-            <li class="signup-btn"><a href="#signup">SIGN UP</a></li>
+            <li class="signup-btn"><a href="/signup.Assets/signin.html">SIGN IN</a></li>
         </ul>
         <div class="helping_hands">
             <h2>
@@ -26,7 +26,7 @@
             </h2>
         </div>    
         <div class="donation">
-            <a href="./donation.html">
+            <a href="/Assets/donation.html">
                 <span><button id="donateButton">DONATE NOW</button></span>
             </a>   
         </div>
@@ -46,6 +46,11 @@
             </ul>
     </footer>
     
+
+
+    <script src="/Assets/donation.js"></script>
+    <script src="/signup.Assets/javascript.js"></script>
     <script src="script.js"></script>
+    <script src="/Assets/management.js"></script>
 </body>
 </html>
