--- a/management.html
+++ b/management.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Donation Management System</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="/Assets/management.css">
 </head>
 <body>
   <h1>View Your Donations 🥳 Management System Tracker</h1>
@@ -11,6 +11,9 @@
     <div class="contributions" id="contributions"></div>
   </div>
 
+
+
+  <script src="/Assets/management.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
