linking navigation bar to all pages

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <!-- Your existing HTML content here -->
       
         <ul class="navbar">
-            <li><a href="#home">HOME</a></li>
-            <li><a href="#contact">CONTACT US</a></li>
-            <li id="logo"><img src="Images/help2-removebg-preview.png" alt="Logo"></li>
-            <li><a href="#about" id="about">ABOUT US</a></li>
+            <li><a href="/index.html">HOME</a></li>
+            <li><a href="/contact.html">CONTACT US</a></li>
+            <li id="logo"><img src="/Images/help2-removebg-preview.png" alt="Logo"></li>
+            <li><a href="/about.html" id="about">ABOUT US</a></li>
             <li class="signup-btn"><a href="/signup.Assets/signin.html">SIGN IN</a></li>
         </ul>
         <div class="helping_hands">
@@ -29,6 +29,10 @@
             <a href="/Assets/donation.html">
                 <span><button id="donateButton">DONATE NOW</button></span>
             </a>   
+            <a href="/management.html">
+                <span><button id="donateButton">DONORS MANAGEMENT TRACKER</button></span>
+            </a>   
+            
         </div>
 
         <div id="donateForm" style="display: none;">
