--- a/signup.Assets/signin.html
+++ b/signup.Assets/signin.html
@@ -6,15 +6,15 @@
  </head>
  <body>
 	<ul class="navbar">
-		<li><a href="#home">HOME</a></li>
-		<li><a href="#contact">CONTACT US</a></li>
+		<li><a href="/index.html">HOME</a></li>
+		<li><a href="/contact.html">CONTACT US</a></li>
 		<li id="logo"><img src="/Images/help2-removebg-preview.png" alt="Logo"></li>
-		<li><a href="#about" id="about">ABOUT US</a></li>
+		<li><a href="/about.html" id="about">ABOUT US</a></li>
 		<li class="signup-btn"><a href="/signup.Assets/signin.html">SIGN IN</a></li>
 	</ul>
  <div class="login_box">
 
- 	<img class="user" src="/Images/letterR.png" alt="img woman">
+ 	<img class="user" src="/Images/save-removebg-preview.png" alt="img woman">
  	<h3>USER LOGIN</h3>
 
  	<form name="loginform" onsubmit="return form1()">
