--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 </head>
 <body>
     <div class="container">
-        <!-- Your existing HTML content here -->
-      
         <ul class="navbar">
             <li><a href="/index.html">HOME</a></li>
-            <li><a href="/contact.html">CONTACT US</a></li>
+            <li><a href="/contact us/contact.html">CONTACT US</a></li>
             <li id="logo"><img src="/Images/help2-removebg-preview.png" alt="Logo"></li>
             <li><a href="/about.html" id="about">ABOUT US</a></li>
             <li class="signup-btn"><a href="/signup.Assets/signin.html">SIGN IN</a></li>
