updating contact us form

--- a/contact us/contact.html
+++ b/contact us/contact.html
@@ -4,17 +4,18 @@
 	<meta charset="UTF-8">
 	<title>HTML5 and JavaScript Contact Form</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<link href="/contact us/contact.css" rel="stylesheet">
+	<link rel="stylesheet" href="/contact us/contact.css">
 </head>
 
 <body>
-	<li><a href="/index.html">HOME</a></li>
+	<div class="container">
+        <ul class="navbar">
+            <li><a href="/index.html">HOME</a></li>
             <li><a href="/contact us/contact.html">CONTACT US</a></li>
             <li id="logo"><img src="/Images/help2-removebg-preview.png" alt="Logo"></li>
             <li><a href="/about.html" id="about">ABOUT US</a></li>
             <li class="signup-btn"><a href="/signup.Assets/signin.html">SIGN IN</a></li>
         </ul>
-	
 	<div class="wrapper">
 		<div id="main" style="padding:50px 0 0 0;">
 		
