--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <li><a href="/index.html">HOME</a></li>
             <li><a href="/contact us/contact.html">CONTACT US</a></li>
             <li id="logo"><img src="/Images/help2-removebg-preview.png" alt="Logo"></li>
-            <li><a href="/about.html" id="about">ABOUT US</a></li>
+            <li><a href="/About us/about.html" id="about">ABOUT US</a></li>
             <li class="signup-btn"><a href="/signup.Assets/signin.html">SIGN IN</a></li>
         </ul>
         <div class="helping_hands">
