--- a/signup.Assets/signin.html
+++ b/signup.Assets/signin.html
@@ -5,13 +5,14 @@
  	<link rel="stylesheet" type="text/css" href="/signup.Assets/signin.css">
  </head>
  <body>
-	<ul class="navbar">
-		<li><a href="/index.html">HOME</a></li>
-		<li><a href="/contact us/contact.html">CONTACT US</a></li>
-		<li id="logo"><img src="/Images/help2-removebg-preview.png" alt="Logo"></li>
-		<li><a href="/about.html" id="about">ABOUT US</a></li>
-		<li class="signup-btn"><a href="/signup.Assets/signin.html">SIGN IN</a></li>
-	</ul>
+	<div class="container">
+        <ul class="navbar">
+            <li><a href="/index.html">HOME</a></li>
+            <li><a href="/contact us/contact.html">CONTACT US</a></li>
+            <li id="logo"><img src="/Images/help2-removebg-preview.png" alt="Logo"></li>
+            <li><a href="/About us/about.html" id="about">ABOUT US</a></li>
+            <li class="signup-btn"><a href="/signup.Assets/signin.html">SIGN IN</a></li>
+        </ul>
  <div class="login_box">
 
  	<img class="user" src="/Images/save-removebg-preview.png" alt="img woman">
