updating management tracker

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <span><button id="donateButton">DONATE NOW</button></span>
             </a>   
             <a href="/management.html">
-                <span><button id="donateButton">DONORS MANAGEMENT TRACKER</button></span>
+                <span><button id="donateButton2">DONORS MANAGEMENT TRACKER</button></span>
             </a>   
             
         </div>
