--- a/contact us/contact.html
+++ b/contact us/contact.html
@@ -64,6 +64,14 @@
 		
 		</div>
 	</div>
+	<footer>
+		<ul class="footer">
+			<li><a href="#services">Services</a></li>
+			<p><span id="return"> Thank You |<a href="#home"><span id="backtotop">Back to top</span> </a></p></span> 
+			<li><span id="rights"><p>&copy; 2023 Children Rescue Centre. All rights reserved.</p></span>
+			</li>
+		</ul>
+</footer>
 
 	<script src="/contact us/contact.js"></script>
 	
