--- a/signup.Assets/signin.html
+++ b/signup.Assets/signin.html
@@ -36,6 +36,14 @@
 
  </form>
  </div>
+ <footer>
+	<ul class="footer">
+		<li><a href="#services">Services</a></li>
+		<p><span id="return"> Thank You |<a href="#home"><span id="backtotop">Back to top</span> </a></p></span> 
+		<li><span id="rights"><p>&copy; 2023 Children Rescue Centre. All rights reserved.</p></span>
+		</li>
+	</ul>
+ 
 
 
  <script src="/signup.Assets/javascript.js"></script>
