--- a/signup.Assets/signup.html
+++ b/signup.Assets/signup.html
@@ -39,6 +39,13 @@
  	<a href="signin.html">Existing user, Login </a>
  </form>
  </div>
+ <ul class="footer" style="margin-top: 840px;">
+	<li><a href="#services">Services</a></li>
+	<p><span id="return"> Thank You |<a href="#home"><span id="backtotop">Back to top</span> </a></p></span> 
+	<li><span id="rights"><p>&copy; 2023 Children Rescue Centre. All rights reserved.</p></span>
+	</li>
+</ul>
+
 
  <script src="/signup.Assets/javascript.js"></script>
  </body>
