--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
             
         </div>
 
+        <div class="bottomtext" style="color: white;margin-top: 650px;font-size: 30px;
+        margin-left: 100px;">
+            <p>
+                Your donation can transform the lives of impoverished children. <br>
+                 Help us provide hope, education, and vital resources to those in need. Together, we can break the cycle of poverty and create a brighter future. 
+            </p>
+        </div>
+
         <div id="donateForm" style="display: none;">
        
         </div>
