--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=dev~!ice-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Children Rescue Centre</title>
 </head>
@@ -17,7 +17,7 @@
             <li><a href="/contact us/contact.html">CONTACT US</a></li>
             <li id="logo"><img src="/Images/help2-removebg-preview.png" alt="Logo"></li>
             <li><a href="/About us/about.html" id="about">ABOUT US</a></li>
-            <li class="signup-btn"><a href="/signup.Assets/signin.html">SIGN IN</a></li>
+            <li class="signup-btn"><a href="/signup.Assets/signin.html"><button style="background-color: rgb(211, 38, 205);margin-left: 150px;">SIGN IN</button></a></li>
         </ul>
         <div class="helping_hands">
             <h2>
